# showcase

./: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: settings.py  urls.py
public/: index.html
showcaseapi/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
showcaseapi/migrations/: 0001_initial.py  0002_auto_20210220_1856.py
src/: App.css  App.js
src/components/: Card.js  Post.js  navigation.js
src/components/wrapper/: index.js  style.css
src/pages/: Blog.js  Home.js  Showcase.js  home.css
src/utils/: API.js
